--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@blocknote/shadcn": "^0.35.0",
     "@codemirror/lang-markdown": "^6.3.4",
     "@codemirror/theme-one-dark": "^6.1.3",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.3.7",
