--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "heroicons": "^2.2.0",
     "lucide-react": "^0.537.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
